--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: I am not feeling creative
-layout: two_column
+layout: default.html
 category: demo page
 ---
 <h2>I Made A Page With Jekyll</h2>
