--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 ---
-title: I am not feeling creative
+title: Emily's Avocados
 layout: default.html
 category: demo page
 ---
-<h2>I Made A Page With Jekyll</h2>
-
-This is the content of the page. All <em>HTML</em> can be included. Since the layout uses bootstrap we can also include <span class="text-danger">Bootstrap classes</span>.
-<p>This is a: {{ page.category }} type page </p>
