a lot has changed, dawg

--- a/index.html
+++ b/index.html
@@ -1,5 +1,48 @@
 ---
 title: Emily's Avocados
 layout: default
-category: demo page
 ---
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <h1>EMILY'S AVOCADOS</h1>
+  </div>
+  <div class="col-md-6 col-md-offset-3">
+    <img src="photos/avocado_master_slider.jpg">
+  </div>
+</div>
+
+<!--image and text-->
+<div class="row">
+  <div class="col-md-5 col-md-offset-1">
+    <img src="photos/avocado_jekyll1.jpg">
+  </div>
+  <div class="col-md-5">
+    <p>"If you have nothing but love for your avocado and you take joy in turning them into guacamole, all you need is someone to share with"
+  </div>
+</div>
+
+<!--image and text-->
+<div class="row">
+  <div class="col-md-5 col-md-offset-1">
+    <img src="photos/avocado_jekyll3.jpg">
+  </div>
+  <div class="col-md-5">
+  </div>
+</div>
+
+<!--contact me row-->
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+  </div>
+  <div class="col-md-1 col-md-offset-6">
+  </div>
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-1">
+  </div>
+</div>
+
+</body>
+</html>
