--- a/index.html
+++ b/index.html
@@ -17,22 +17,14 @@ layout: default
     <img src="photos/avocado_jekyll1.jpg">
   </div>
   <div class="col-md-5">
-    <p>"If you have nothing but love for your avocado and you take joy in turning them into guacamole, all you need is someone to share with"
-  </div>
-</div>
-
-<!--image and text-->
-<div class="row">
-  <div class="col-md-5 col-md-offset-1">
-    <img src="photos/avocado_jekyll3.jpg">
-  </div>
-  <div class="col-md-5">
+    <p>"If you have nothing but love for your avocado and you take joy in turning them into guacamole, all you need is someone to share with"</p>
   </div>
 </div>
 
 <!--contact me row-->
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
+    <h1>CONTACT ME</h1>
   </div>
   <div class="col-md-1 col-md-offset-6">
   </div>
