--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 ---
 <div class="row">
   <div class="col-md-8 col-md-offset-3">
-    <h1>EMILY'S AVOCADOS</h1>
+    <h1 class="header">EMILY'S AVOCADOS</h1>
   </div>
   <div class="col-md-6 col-md-offset-3">
     <img src="photos/avocado_master_slider.jpg">
@@ -14,7 +14,7 @@ layout: default
 <!--image and text-->
 <div class="row">
   <div class="col-md-5 col-md-offset-1">
-    <img src="photos/avocado_jekyll1.jpg">
+    <img src="photos/avocado_jekyll3.jpg">
   </div>
   <div class="col-md-5">
     <p>"If you have nothing but love for your avocado and you take joy in turning them into guacamole, all you need is someone to share with"</p>
