--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
     <img src="photos/avocado_jekyll3.jpg">
   </div>
   <div class="col-md-5">
-    <p class="">"If you have nothing but love for your avocado and you take joy in turning them into guacamole, all you need is someone to share with"</p>
+    <p class="sec2quote">"If you have nothing but love for your avocado and you take joy in turning them into guacamole, all you need is someone to share with"</p>
   </div>
 </div>
 
