--- a/index.html
+++ b/index.html
@@ -13,18 +13,15 @@ layout: default
 
 <!--image and text-->
 <div class="row">
-  <div class="col-md-5 col-md-offset-1">
-    <img src="photos/avocado_jekyll3.jpg">
-  </div>
-  <div class="col-md-5">
-    <p class="sec2quote">"If you have nothing but love for your avocado and you take joy in turning them into guacamole, all you need is someone to share with"</p>
+  <div class="col-md-10 col-md-offset-1">
+    <p class="blockquote">Love avocados? Because I do. On this site, you'll learn everything there is to know about this super fruit, how to prepare it, and abundant reasons to love it.</p>
   </div>
 </div>
 
 <!--contact me row-->
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <h1>CONTACT ME</h1>
+    <h1>CONTACT ME!</h1>
   </div>
   <div class="col-md-1 col-md-offset-6">
   </div>
