--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ layout: default
     <h1>CONTACT ME!</h1>
   </div>
   <div class="col-md-1 col-md-offset-6">
+    <img src="photos/facebook.png">
   </div>
   <div class="col-md-1">
   </div>
