--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@ layout: default
 <!--contact me row-->
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <h1>CONTACT ME!</h1>
+    <p class="contactme">CONTACT ME!</p>
   </div>
-  <div class="col-md-1 col-md-offset-6">
+  <div class="col-md-1 col-md-offset-3">
     <img src="photos/facebook.png">
   </div>
   <div class="col-md-1">
+    <img src="photos/instagram.png">
   </div>
   <div class="col-md-1">
-  </div>
+    <img src="photos/twitter">
+    </div>
   <div class="col-md-1">
   </div>
 </div>
