--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@ layout: default
     <img src="photos/instagram.png">
   </div>
   <div class="col-md-1">
-    <img src="photos/twitter">
+    <img src="photos/twitter.png">
     </div>
   <div class="col-md-1">
+    <img src="photos/linkedin.png">
+  </div>
+  <div class="col-md-1">
+    <img src="photos/tumblr.png">
   </div>
 </div>
 
