--- a/contact.html
+++ b/contact.html
@@ -2,23 +2,37 @@
 title: Emily's Avocados
 layout: default
 ---
+
 <!--contact me-->
+<div class="container-fluid">
+<div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <p class="contactme">CONTACT ME!</p>
+    <p class="contactme">HI, I'M EMILY.</p>
   </div>
   <div class="col-md-1 col-md-offset-4">
+    <a href="www.facebook.com">
     <img src="photos/facebook.png">
+  </a>
   </div>
   <div class="col-md-1">
+    <a href="www.instagram.com">
     <img src="photos/instagram.png">
+  </a>
   </div>
   <div class="col-md-1">
+    <a href="www.twitter.com">
     <img src="photos/twitter.png">
+  </a>
     </div>
   <div class="col-md-1">
+    <a href="www.linkedin.com">
     <img src="photos/linkedin.png">
+  </a>
   </div>
   <div class="col-md-1">
+    <a href="www.tumblr.com">
     <img src="photos/tumblr.png">
+  </a>
   </div>
+</div>
 </div>
