--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 title: Emily's Avocados
 layout: default
 ---
+<div class="container-fluid">
 <div class="row">
   <div class="col-md-8 col-md-offset-3">
     <h1 class="header">EMILY'S AVOCADOS</h1>
@@ -17,6 +18,4 @@ layout: default
     <p class="blockquote">Love avocados? Because I do. On this site, you'll learn everything there is to know about this super fruit, how to prepare it, and abundant reasons to love it.</p>
   </div>
 </div>
-
-</body>
-</html>
+</div>
