--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@ layout: default
     <p class="contactme">HI, I'M EMILY.</p>
   </div>
   <div class="col-md-1 col-md-offset-4">
-    <a href="www.facebook.com">
+    <a href="http://www.facebook.com">
     <img src="photos/facebook.png">
   </a>
   </div>
