--- a/contact.html
+++ b/contact.html
@@ -15,22 +15,22 @@ layout: default
   </a>
   </div>
   <div class="col-md-1">
-    <a href="www.instagram.com">
+    <a href="http://www.instagram.com">
     <img src="photos/instagram.png">
   </a>
   </div>
   <div class="col-md-1">
-    <a href="www.twitter.com">
+    <a href="http://www.twitter.com">
     <img src="photos/twitter.png">
   </a>
     </div>
   <div class="col-md-1">
-    <a href="www.linkedin.com">
+    <a href="http://www.linkedin.com">
     <img src="photos/linkedin.png">
   </a>
   </div>
   <div class="col-md-1">
-    <a href="www.tumblr.com">
+    <a href="http://www.tumblr.com">
     <img src="photos/tumblr.png">
   </a>
   </div>
