--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,9 @@ layout: default
   <div class="col-md-6 col-md-offset-3">
     <p class="contactme">HI, I'M EMILY.</p>
   </div>
+  <div class="col-md-10 col-md-offset-1">
+    <p class="aboutme">I'm a spunky millenial that can't go a day without an avocado. Gastropub beard raw denim biodiesel, locavore farm-to-table occupy celiac. Stumptown williamsburg pop-up slow-carb four dollar toast, mumblecore selfies. +1 fashion axe banh mi blue bottle pop-up food truck marfa retro, occupy sriracha vice green juice stumptown. Contact me and lets talk avocado!</p>
+  </div>
   <div class="col-md-1 col-md-offset-4">
     <a href="http://www.facebook.com">
     <img src="photos/facebook.png">
