--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
 </div>
 
 <!--image and text-->
-<div class="row">
+<div id="blockquote" class="row">
   <div class="col-md-10 col-md-offset-1">
     <p class="blockquote">Love avocados? Because I do. On this site, you'll learn everything there is to know about this super fruit, how to prepare it, and abundant reasons to love it.</p>
   </div>
