--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ layout: default
 <!--image and text-->
 <div id="blockquote" class="row">
   <div class="col-md-10 col-md-offset-1">
-    <p class="blockquote">Love avocados? Because I do. On this site, you'll learn everything there is to know about this super fruit, how to prepare it, and abundant reasons to love it.</p>
+    <p class="blockquote">Love avocados? Because I do. On this site, you'll learn everything there is to know about this super fruit: nutrition facts, preparation, and recipes. Discover abundant reasons to love this incredible fruit.</p>
   </div>
+  
 </div>
 </div>
