--- a/superfruit.html
+++ b/superfruit.html
@@ -2,3 +2,10 @@
 title: The Super Fruit
 layout: default
 ---
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-3">
+      <p class="superfruit_header">THE SUPER FRUIT</p>
+    </div>
+  </div>
+</div>
