--- a/superfruit.html
+++ b/superfruit.html
@@ -7,5 +7,8 @@ layout: default
     <div class="col-md-8 col-md-offset-2">
       <p class="superfruit_header">THE SUPER FRUIT</p>
     </div>
+    <div class="col-md-10 col-md-offset-1">
+      <p class="superfruit">Gastropub beard raw denim biodiesel, locavore farm-to-table occupy celiac. Stumptown williamsburg pop-up slow-carb four dollar toast, mumblecore selfies. +1 fashion axe banh mi blue bottle pop-up food truck marfa retro, occupy sriracha vice green juice stumptown.</p>
+    </div>
   </div>
 </div>
