--- a/superfruit.html
+++ b/superfruit.html
@@ -8,7 +8,9 @@ layout: default
       <p class="superfruit_header">THE SUPER FRUIT</p>
     </div>
     <div class="col-md-10 col-md-offset-1">
-      <p class="superfruit">Gastropub beard raw denim biodiesel, locavore farm-to-table occupy celiac. Stumptown williamsburg pop-up slow-carb four dollar toast, mumblecore selfies. +1 fashion axe banh mi blue bottle pop-up food truck marfa retro, occupy sriracha vice green juice stumptown.</p>
+      <p class="superfruit">Avocados are the world's healthiest food. The avocado is a rather unique type of fruit.
+Most fruit consists primarily of carbohydrate, while avocado is high in healthy fats.
+Numerous studies show that it has powerful beneficial effects on health.</p>
     </div>
   </div>
 </div>
