--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container-fluid">
 <div class="row">
   <div class="col-md-8 col-md-offset-3">
-    <h1 class="header">EMILY'S AVOCADOS</h1>
+    <h1 class="homepage_header">EMILY'S AVOCADOS</h1>
   </div>
   <div class="col-md-6 col-md-offset-3">
     <img src="photos/avocado_master_slider.jpg">
@@ -17,6 +17,6 @@ layout: default
   <div class="col-md-10 col-md-offset-1">
     <p class="blockquote">Love avocados? Because I do. On this site, you'll learn everything there is to know about this super fruit: nutrition facts, preparation, and recipes. Discover abundant reasons to love this incredible fruit.</p>
   </div>
-  
+
 </div>
 </div>
