--- a/recipes.html
+++ b/recipes.html
@@ -2,3 +2,13 @@
 title: Recipes
 layout: default
 ---
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-3">
+      <p class="recipe_header">RECIPES</p>
+    </div>
+    <div class="col-md-10 col-md-offset-1">
+      <p class="recipes">There's more to avocados than just using them to make guacamole. Although that's pretty darn awesome. Avocados can be used to enhance just about 
+        any recipe. From pasta dishes to cornbread, avocados take any meal from bleh to heck yes. Here are some recipes to try! </p>
+    </div>
+</div>
