--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ layout: default
 <div class="container-fluid">
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <p class="contactme">HI, I'M EMILY.</p>
+    <p class="contactme_header">HI, I'M EMILY.</p>
   </div>
   <div class="col-md-10 col-md-offset-1">
     <p class="aboutme">I'm a spunky millenial that can't go a day without an avocado. Gastropub beard raw denim biodiesel, locavore farm-to-table occupy celiac. Stumptown williamsburg pop-up slow-carb four dollar toast, mumblecore selfies. +1 fashion axe banh mi blue bottle pop-up food truck marfa retro, occupy sriracha vice green juice stumptown. Contact me and lets talk shop!</p>
