--- a/recipes.html
+++ b/recipes.html
@@ -12,3 +12,8 @@ layout: default
         any recipe. From pasta dishes to cornbread, avocados take any meal from bleh to heck yes. Here are some recipes to try! </p>
     </div>
 </div>
+<div class="row">
+  <div class="col-md-8 col-md-offset-1">
+    <img src="photos/avocadopasta.png">
+</div>
+</div>
