--- a/recipes.html
+++ b/recipes.html
@@ -13,7 +13,10 @@ layout: default
     </div>
 </div>
 <div class="row">
-  <div class="col-md-8 col-md-offset-1">
-    <img src="photos/avocadopasta.png">
+  <div class="col-md-5 col-md-offset-1">
+    <img src="photos/avocado_jekyll3.jpg">
+  </div>
+  <div class="col-md-5">
+    <p class="recipe1"> </p>
 </div>
 </div>
