--- a/recipes.html
+++ b/recipes.html
@@ -12,11 +12,13 @@ layout: default
         any recipe. From pasta dishes to cornbread, avocados take any meal from bleh to heck yes. Here are some recipes to try! </p>
     </div>
 </div>
+
 <div class="row">
-  <div class="col-md-5 col-md-offset-1">
+  <div class="col-md-5">
     <img src="photos/avocado_jekyll3.jpg">
   </div>
-  <div class="col-md-5">
-    <p class="recipe1"> </p>
+  <div class="col-md-7">
+    <p class="recipe1_header">Avocado Pasta with Mozzarella</p>
+    <p class="recipe1">Mumblecore shoreditch disrupt, fashion axe cred humblebrag small batch vegan farm-to-table helvetica chambray. Shabby chic helvetica knausgaard ennui meditation chartreuse. Art party everyday carry trust fund keffiyeh brunch bicycle rights normcore, hammock four loko bespoke kinfolk tattooed bushwick next level before they sold out. Pickled keytar narwhal distillery migas. Cold-pressed four loko heirloom, freegan truffaut cardigan meggings typewriter mumblecore raw denim cray mustache letterpress you probably haven't heard of them. </p>
 </div>
 </div>
