--- a/recipes.html
+++ b/recipes.html
@@ -15,7 +15,7 @@ layout: default
 
 <div class="row">
   <div class="col-md-5">
-    <img src="photos/avocado_jekyll3.jpg">
+    <img src="photos/avocadopasta.png">
   </div>
   <div class="col-md-7">
     <p class="recipe1_header">Avocado Pasta with Mozzarella</p>
