--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ layout: default
 ---
 
 <!--contact me-->
-<div class="container-fluid">
+<div class="container">
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <p class="contactme_header">HI, I'M EMILY.</p>
