--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: Emily's Avocados
 layout: default
 ---
-<div class="container-fluid">
+<div class="container">
 <div class="row">
   <div class="col-md-8 col-md-offset-3">
     <h1 class="homepage_header">EMILY'S AVOCADOS</h1>
