--- a/recipes.html
+++ b/recipes.html
@@ -2,7 +2,7 @@
 title: Recipes
 layout: default
 ---
-<div class="container-fluid">
+<div class="container">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <p class="recipes_header">RECIPES</p>
@@ -14,10 +14,10 @@ layout: default
 </div>
 
 <div class="row">
-  <div class="col-md-5">
+  <div class="col-md-5 col-md-offset-1">
     <img src="photos/pasta.png">
   </div>
-  <div class="col-md-7">
+  <div id="recipe1block" class="col-md-5">
     <p class="recipe1_header">Avocado Pasta with Mozzarella</p>
     <p class="recipe1">Mumblecore shoreditch disrupt, fashion axe cred humblebrag small batch vegan farm-to-table helvetica chambray. Shabby chic helvetica knausgaard ennui meditation chartreuse. Art party everyday carry trust fund keffiyeh brunch bicycle rights normcore, hammock four loko bespoke kinfolk tattooed bushwick next level before they sold out. Pickled keytar narwhal distillery migas. Cold-pressed four loko heirloom, freegan truffaut cardigan meggings typewriter mumblecore raw denim cray mustache letterpress you probably haven't heard of them. </p>
 </div>
