--- a/recipes.html
+++ b/recipes.html
@@ -2,7 +2,7 @@
 title: Recipes
 layout: default
 ---
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <p class="recipes_header">RECIPES</p>
@@ -14,7 +14,7 @@ layout: default
 </div>
 
 <div class="row">
-  <div class="col-md-5">
+  <div class="col-md-5 col-md-offset-1">
     <img src="photos/pasta.png">
   </div>
   <div id="recipe1block" class="col-md-5">
