--- a/recipes.html
+++ b/recipes.html
@@ -15,7 +15,7 @@ layout: default
 
 <div class="row">
   <div class="col-md-5 col-md-offset-1">
-    <img src="photos/pasta.png">
+    <img src="photos/pasta.png" class="recipeimg">
   </div>
   <div id="recipe1block" class="col-md-5">
     <p class="recipe1_header">Avocado Pasta with Mozzarella</p>
@@ -24,18 +24,18 @@ layout: default
 </div>
 
 <div class="row">
-  <div id="recipe1block" class="col-md-5 col-md-offset-1">
+  <div class="col-md-5 col-md-offset-1">
+    <img src="photos/cornbread.png" class="recipeimg">
+  </div>
+  <div id="recipe1block" class="col-md-5">
   <p class="recipe1_header">Mexican Style Cornbread</p>
   <p class="recipe1">Mumblecore shoreditch disrupt, fashion axe cred humblebrag small batch vegan farm-to-table helvetica chambray. Shabby chic helvetica knausgaard ennui meditation chartreuse. Art party everyday carry trust fund keffiyeh brunch bicycle rights normcore, hammock four loko bespoke kinfolk tattooed bushwick next level before they sold out. Pickled keytar narwhal distillery migas. Cold-pressed four loko heirloom, freegan truffaut cardigan meggings typewriter mumblecore raw denim cray mustache letterpress you probably haven't heard of them. </p>
-</div>
-<div class="col-md-5">
-  <img src="photos/cornbread.png">
 </div>
 </div>
 
 <div class="row">
   <div class="col-md-5 col-md-offset-1">
-    <img src="photos/salmon.png">
+    <img src="photos/salmon.png" class="recipeimg">
   </div>
   <div id="recipe1block" class="col-md-5">
     <p class="recipe1_header">Salmon and Avocado Salad</p>
