--- a/superfruit.html
+++ b/superfruit.html
@@ -10,7 +10,40 @@ layout: default
     <div class="col-md-10 col-md-offset-1">
       <p class="superfruit">Avocados are the world's healthiest food. The avocado is a rather unique type of fruit.
 Most fruit consists primarily of carbohydrate, while avocado is high in healthy fats.
-Numerous studies show that it has powerful beneficial effects on health.</p>
+Numerous studies show that it has powerful beneficial effects on health. Here are some fun facts!</p>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-5 col-md-offset-1">
+      <img src="photos/avocadofact1.png" class="recipeimg">
+    </div>
+    <div id="recipe1block" class="col-md-5">
+        <p class="recipe1_header">They're fiber rich.</p>
+        <p class="recipe1">Mumblecore shoreditch disrupt, fashion axe cred humblebrag small batch vegan farm-to-table helvetica chambray. Shabby chic helvetica knausgaard ennui meditation chartreuse. Art party everyday carry trust fund keffiyeh brunch bicycle rights normcore, hammock four loko bespoke kinfolk tattooed bushwick next level before they sold out. Pickled keytar narwhal distillery migas. Cold-pressed four loko heirloom, freegan truffaut cardigan meggings typewriter mumblecore raw denim cray mustache letterpress you probably haven't heard of them. </p>
+   </div>
+ </div>
+
+   <div class="row">
+     <div class="col-md-5 col-md-offset-1">
+       <img src="photos/avocadofact3.png" class="recipeimg">
+     </div>
+     <div id="recipe1block" class="col-md-5">
+         <p class="recipe1_header">They're a climacteric fruit.</p>
+         <p class="recipe1">Mumblecore shoreditch disrupt, fashion axe cred humblebrag small batch vegan farm-to-table helvetica chambray. Shabby chic helvetica knausgaard ennui meditation chartreuse. Art party everyday carry trust fund keffiyeh brunch bicycle rights normcore, hammock four loko bespoke kinfolk tattooed bushwick next level before they sold out. Pickled keytar narwhal distillery migas. Cold-pressed four loko heirloom, freegan truffaut cardigan meggings typewriter mumblecore raw denim cray mustache letterpress you probably haven't heard of them. </p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-5 col-md-offset-1">
+      <img src="photos/avocadofact2.png" class="recipeimg">
+    </div>
+    <div id="recipe1block" class="col-md-5">
+        <p class="recipe1_header">They lower cholesterol.</p>
+        <p class="recipe1">Mumblecore shoreditch disrupt, fashion axe cred humblebrag small batch vegan farm-to-table helvetica chambray. Shabby chic helvetica knausgaard ennui meditation chartreuse. Art party everyday carry trust fund keffiyeh brunch bicycle rights normcore, hammock four loko bespoke kinfolk tattooed bushwick next level before they sold out. Pickled keytar narwhal distillery migas. Cold-pressed four loko heirloom, freegan truffaut cardigan meggings typewriter mumblecore raw denim cray mustache letterpress you probably haven't heard of them. </p>
+   </div>
+ </div>
+
+
+
 </div>
