--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: Emily's Avocados
 layout: default
 ---
-<div class="container">
+<div class="container-fluid">
 <div class="row">
   <div class="col-md-8 col-md-offset-3">
     <h1 class="homepage_header">EMILY'S AVOCADOS</h1>
@@ -15,7 +15,7 @@ layout: default
 <!--image and text-->
 <div id="blockquote" class="row">
   <div class="col-md-10 col-md-offset-1">
-    <p class="blockquote">Love avocados? Because I do. On this site, you'll learn everything there is to know about this super fruit: nutrition facts, preparation, and recipes. Discover abundant reasons to love this incredible fruit.</p>
+    <p class="blockquote">Love avocados? Because I do. On this site, you'll learn everything there is to know about this super fruit: nutrition facts, preparation, recipes, and more. Discover abundant reasons to love the avocado- the healthiest food in the world.</p>
   </div>
 
 </div>
